# WhipperSnapPy

./: .codespellignore  Dockerfile  LICENSE  README.md  pyproject.toml  run_whippersnapper.py
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md  questions-help-support.md
.github/workflows/: build.yml  code-style.yml  doc.yml  publish.yml  pytest.yml
dev/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/.doctrees/: index.doctree
dev/.doctrees/api/: index.doctree
dev/_sources/api/: index.rst.txt
dev/api/: index.html
doc/: conf.py  index.rst  links.inc  references.bib
doc/_templates/autosummary/: class.rst
whippersnapper/: config_app.py  core.py  whippersnapper.py
whippersnapper/cli/: __init__.py  run_whippersnapper.py
whippersnappy/: __init__.py  config_app.py  core.py  read_geometry.py
whippersnappy/cli/: __init__.py  whippersnap.py
