[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'whippersnapper'
version = '2.0.0.dev'
description = 'A package to plot and capture FreeSurfer-style surface overlays.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
authors = [
    {name = 'Martin Reuter', email = 'martin.reuter@dzne.de'},
]
maintainers = [
    {name = 'Martin Reuter', email = 'martin.reuter@dzne.de'},
]
keywords = [
    'python',
    'FreeSurfer',
    'Brain MRI',
    'Cortical Surface',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
]
dependencies = [
    'glfw',
    'numpy>=1.21',
    'pyrr',
    'pillow',
    'pyopengl',
    'PyQt5'
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
style = [
    'bibclean',
    'black',
    'codespell',
    'isort',
    'flake8',
    'pydocstyle[toml]',
]
test = [
    'pytest',
    'pytest-cov',
    'pytest-timeout',
]
all = [
    'whippersnapper[build]',
    'whippersnapper[doc]',
    'whippersnapper[style]',
    'whippersnapper[test]',
]
full = [
    'whippersnapper[all]',
]

[project.urls]
homepage = 'https://github.com/Deep-MI/WhipperSnapper'
documentation = 'https://github.com/Deep-MI/WhipperSnapper'
source = 'https://github.com/Deep-MI/WhipperSnapper'
tracker = 'https://github.com/Deep-MI/WhipperSnapper/issues'

[project.scripts]
whippersnapper = 'whippersnapper.cli:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['whippersnapper*']
exclude = ['whippersnapper*tests']

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
    | data/
    | examples/
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 88
py_version = 38
extend_skip_glob = [
    'setup.py',
    'data/*',
    'examples/*',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^whippersnapper.*'
add_ignore = 'D100,D104,D107'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/whippersnapper/_version.py',
    '**/whippersnapper/commands/*',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
