[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'whippersnappy'
version = '1.0.0'
description = 'A package to plot and capture FreeSurfer-style surface overlays.'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.8'
authors = [
    {name = 'Martin Reuter', email = 'martin.reuter@dzne.de'},
]
maintainers = [
    {name = 'Martin Reuter', email = 'martin.reuter@dzne.de'},
]
keywords = [
    'python',
    'FreeSurfer',
    'Brain MRI',
    'Cortical Surface',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Science/Research',
]
dependencies = [
    'glfw',
    'numpy>=1.21',
    'pyrr',
    'pillow',
    'pyopengl',
    'nibabel',
    'PyQt5',
    'psutil'
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
style = [
    'bibclean',
    'black',
    'codespell',
    'isort',
    'flake8',
    'pydocstyle[toml]',
]
test = [
    'pytest',
    'pytest-cov',
    'pytest-timeout',
]
all = [
    'whippersnappy[build]',
    'whippersnappy[doc]',
    'whippersnappy[style]',
    'whippersnappy[test]',
]
full = [
    'whippersnappy[all]',
]

[project.urls]
homepage = 'https://github.com/Deep-MI/WhipperSnapPy'
documentation = 'https://github.com/Deep-MI/WhipperSnapPy'
source = 'https://github.com/Deep-MI/WhipperSnapPy'
tracker = 'https://github.com/Deep-MI/WhipperSnapPy/issues'

[project.scripts]
whippersnap = 'whippersnappy.cli:run'
whippersnappy-sys_info = 'whippersnappy.commands.sys_info:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['whippersnappy*']
exclude = ['whippersnappy*tests']

[tool.setuptools.package-data]
whippersnappy = ['*.ttf']

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
    | setup.py
    | data/
    | examples/
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 88
py_version = 38
extend_skip_glob = [
    'setup.py',
    'data/*',
    'examples/*',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^whippersnappy.*'
add_ignore = 'D100,D104,D107'

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/whippersnappy/_version.py',
    '**/whippersnappy/commands/*',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
